Installed Media Embed Field module but did not enable. Fixed IE and alignment issues on Our Programs page and homepage carousel. Completed switch from New to Future Students.

--- a/web/themes/custom/miramar/css/style.css
+++ b/web/themes/custom/miramar/css/style.css
@@ -27,6 +27,11 @@ ul.noindent,ul.noindent li {
 .content ul > li:before,.field--name-description ul > li:before {
 	content: '❖ ';
 }
+.content ul.checklist > li:before,.field--name-description ul.checklist > li:before {
+	content: '✔ '!important;
+}
+
+
 ul.nobull li:before{ content:none;}
 table.small,ul.small,ol.small,p.small {font-size:0.75em;}
 table.small td,table.small th {padding:2px;vertical-align:top;}
@@ -857,6 +862,17 @@ nav.mobile-nav li:first-child ol li{
 	color: #fff;
 	padding: 25% 30px;
 }
+.program-list .news-overlay{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	max-width: 155px;
+	height: 100%;
+  	background: rgba(29, 26, 81, 0.5);
+	text-align: center;
+	color: #fff;
+	padding: 25% 30px;
+}
 .ne-wrap:hover .news-overlay{
 	background:none;
 }
@@ -1322,35 +1338,51 @@ ul.dp-menu li:hover a{
 	color: #575c5d;
 	font-size: 1em;
 }
-.program .views-row {width:99%;padding-left:20px;margin-left:auto!important;margin-right:auto!important}
+.view-content.program-list {width:100%}
+
+.program-list .views-row {width:100%;padding-left:20px;margin-left:auto!important;margin-right:auto!important}
 .program-list-panel {
 	background: url('../images/zigzag.png') center center no-repeat fixed;
 }
-.program-list-panel .col-md-2 {
+.program-list-panel .views-col {
 	padding-bottom: 15px;
 }
-.program-list-panel .col-md-2 a {
-	display: block;
+
+.program-list-panel .views-col:not(:last-child) {
+	/*margin-right: 20px!important;*/
+}
+
+.program-list-panel .views-col a {
+  display: block;
   text-align: center;
   color: #fff;
   text-decoration: none;
+	font-weight: bold!important;
+	font-size:16px!important;
+	font-family:Oswald!important;
+	color: #ffffff!important;
 
 }
+
+
 .program-list-panel .container {
-	margin-top: 15px;
+	margin: 15px auto 0 auto;
+	width:100%;
+	
 }
-.program-list-panel .col-md-2 a img {
-	filter: brightness(40%);
+.program-list-panel .views-col img {
 	max-height: 305px;
+	max-width: 155px;
 }
-.program-list-panel .col-md-2 a img.force-height {
+.program-list-panel .views-col img.force-height {
 	min-height: 305px;
 }
+
 .slide-content {padding:0;margin:0;}
 .slide__caption {height:75px!important;}
-.program-list-panel strong,
+
 .step-panel strong,
-.view-program-carousel .slide__caption,.view-program-carousel .slide__title {
+.view-program-carousel .slide__caption,.view-program-carousel .slide__title,.view-program-carousel h2 {
 	display: block!important;
 	float:center;
 	background:none;
@@ -1380,20 +1412,20 @@ ul.dp-menu li:hover a{
 	display:none;
 }
 .slick-1 {width:100%;margin:0 auto;}
-.step-panel .program img,
+/*.step-panel .program img,*/
 .slick-1 img {
 	/*width:155px!important;*/
     -webkit-filter: brightness(50%); /* Safari 6.0 - 9.0 */
     filter: brightness(50%);}
 
-.step-panel .program a:hover img,
+/*.step-panel .program a:hover img,*/
 .slick-1 a:hover img {
     -webkit-filter: brightness(100%); /* Safari 6.0 - 9.0 */
     filter: brightness(100%);}
 .slides
-.program-list-panel .col-md-2 a:hover img {
+/*.program-list-panel .col-md-2 a:hover img {
 	filter: brightness(100%);
-}
+}*/
 table.faculty {width:100%;}
 table.faculty thead th {
     color: #31b6c7;
